--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QRCodeGenerator">
         <activity
-            android:name=".SlideAdapter"
+            android:name=".SliderAdapter"
             android:exported="false" />
         <activity
             android:name=".TutorialActivity"
