* User selfie before generation of QR Code * User confirmation of data privacy disclaimer * User guide

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QRCodeGenerator">
         <activity
+            android:name=".DataPrivacyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SelfieActivity"
+            android:exported="false" />
+        <activity
             android:name=".SliderAdapter"
             android:exported="false" />
         <activity
